ingress/ingress-demo-service.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-service-ingress
spec:
  routes:
    - match: PathPrefix(`/demo`)
      kind: Rule
      middlewares:
        - name: test-stripprefix
      services:
        - name: demo-service
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /demo
